# AOC2025

./: .containerignore  .env.example  .pre-commit-config.yaml  Containerfile  aoc  aoc2025.cabal  readme.md
app/: Main.hs
lib/: SantaLib.hs  Solutions.hs
lib/SantaLib/: Parsing.hs  Service.hs
lib/Solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
